samples/_failures_safe/1761088810_96c45a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_537f8a57.c: In function ‘main’:
./samples/SAFE/__tmp_537f8a57.c:171:5: error: expected expression at end of input
  171 |     decompressed_buf.length = simple_decompress(compressed_buf.data,
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_537f8a57.c:171:31: error: too few arguments to function ‘simple_decompress’
  171 |     decompressed_buf.length = simple_decompress(compressed_buf.data,
      |                               ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_537f8a57.c:71:8: note: declared here
   71 | size_t simple_decompress(const uint8_t* input, size_t input_len, uint8_t* output, size_t output_max) {
      |        ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_537f8a57.c:171:5: error: expected declaration or statement at end of input
  171 |     decompressed_buf.length = simple_decompress(compressed_buf.data,
      |     ^~~~~~~~~~~~~~~~
